<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_resumen"
            android:icon="@drawable/nav_resumen"
            android:title="@string/menuResumen" />
        <item
            android:id="@+id/nav_actividades"
            android:icon="@drawable/nav_actividades"
            android:title="@string/menuAct" />
        <item
            android:id="@+id/nav_pesoPromedio"
            android:icon="@drawable/nav_peso"
            android:title = "@string/menuPeso"/>
        <item
            android:id="@+id/nav_alimento"
            android:icon="@drawable/nav_alimento"
            android:title="@string/menuAlimento" />
        <item
            android:id="@+id/nav_lotes"
            android:icon="@drawable/nav_lotes"
            android:title="@string/menuLotes" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/nav_configuracion"
            android:title="@string/menuConfiguracion"/>
        <item
            android:id="@+id/nav_cerrarSesion"
            android:icon="@drawable/nav_cerrarsesion"
            android:title="@string/menuCerrarSesion" />
        
    </group>
</menu>
